--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="A modern, feature-rich Todo application built with React and Tailwind CSS" />
+    <meta name="theme-color" content="#2563eb" />
+    <title>TodoApp - Manage Your Tasks</title>
   </head>
   <body>
     <div id="root"></div>
